# auto-grader

./: .gitignore  README.md  pyproject.toml
assignments/hw1_output/: config.yaml  expected_input.txt
assignments/hw2_pytest/: config.yaml
assignments/hw2_pytest/tests/: test_sort.py
assignments/hw3_llm/: config.yaml  instructions.md  rubric.md
assignments/hw4_cpp/: config.yaml  expected_input.txt
assignments/hw5_cpp_fibonacci/: config.yaml  instructions.md  rubric.md
src/autograder/: claude_check.py  cli.py  config.py  discovery.py  models.py  output.py  runner.py  sandbox.py  web.py
src/autograder/graders/: base.py  llm_review.py  output_compare.py  pytest_runner.py
templates/: assignment.html  base.html  create.html  feedback.html  index.html  submission.html
