[project]
name = "autograder"
version = "0.1.0"
description = "A multi-mode autograder for course assignments"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pyyaml",
    "pydantic",
    "nbformat",
    "pytest",
    "pytest-json-report",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "pypdf>=4.0",
    "pypdfium2>=4.0",
    "pillow>=10.0",
]

[project.scripts]
autograder = "autograder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autograder"]
